--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="logo"></div>
         <div>
           <div class="title">SegnalaFacile</div>
-          <div class="badge">DEMO • PWA installabile • salvataggio locale + invio Telegram</div>
+          <div class="badge">Salvataggio locale + invio Telegram</div>
         </div>
       </div>
       <div class="pill" id="installPill" style="display:none;">⬇️ Installa</div>
@@ -228,14 +228,14 @@
           <div class="meta">
             <div style="font-weight:800;color:var(--text)">Anteprima foto</div>
             <div id="photoMeta"></div>
-            <div class="hint" style="margin-top:8px">La foto viene anche inoltrata su Telegram (se presente).</div>
+            <div class="hint" style="margin-top:8px">La foto viene inoltrata sul gruppo Telegram Segnala Facile.</div>
           </div>
         </div>
 
         <div class="toggle">
           <div>
             <strong>Invia anche in forma anonima</strong><br>
-            <span>Nessun nome richiesto nella demo</span>
+            <span>Nessun nome richiesto</span>
           </div>
           <input id="anonimo" type="checkbox" />
         </div>
@@ -246,7 +246,7 @@
         </div>
 
         <div class="hint">
-          Nota: salvataggio locale + inoltro al tuo gruppo Telegram tramite Cloudflare Worker.
+          Nota: salvataggio locale + inoltro al gruppo Telegram Segnala Facile.
         </div>
       </div>
     </section>
@@ -258,7 +258,7 @@
           <div style="font-size:22px">✅</div>
           <div>
             <div style="font-weight:900;font-size:18px">Segnalazione inviata correttamente</div>
-            <div class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata su Telegram (se configurato).</div>
+            <div class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata sul gruppo Telegram Segnala Facile.</div>
           </div>
         </div>
 
