--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <a class="btn ghost" href="#/contacts">☎️ Contatti rapidi</a>
           <a class="btn ghost" href="#/my">🗂️ Le mie segnalazioni</a>
         </div>
-        <div class="hint">Nessuna registrazione richiesta. Salvataggio locale + inoltro su Telegram tramite Worker.</div>
+        <div class="hint">Nessuna registrazione richiesta. Salvataggio locale + inoltro sul canale Telegram.</div>
       </div>
 
       <div class="card">
