--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="logo"></div>
         <div>
           <div class="title">SegnalaFacile</div>
-          <div class="badge">DEMO • PWA installabile • salvataggio locale + invio Telegram</div>
+          <div class="badge">PWA installabile • salvataggio locale + invio gruppo TelegramSegnala Facile</div>
         </div>
       </div>
       <div class="pill" id="installPill" style="display:none;">⬇️ Installa</div>
@@ -238,7 +238,7 @@
           <a class="btn ghost" href="#/contacts">☎️ Contatti rapidi</a>
           <a class="btn ghost" href="#/my">🗂️ Le mie segnalazioni</a>
         </div>
-        <div class="hint">Nessuna registrazione richiesta. Salvataggio locale + inoltro su Telegram tramite Worker.</div>
+        <div class="hint">Nessuna registrazione richiesta. Salvataggio locale + inoltro su gruppo Telegram Segnala Facile.</div>
       </div>
 
       <div class="card">
@@ -287,14 +287,14 @@
           <div class="meta">
             <div style="font-weight:800;color:var(--text)">Anteprima foto</div>
             <div id="photoMeta"></div>
-            <div class="hint" style="margin-top:8px">Se presente, la foto viene inoltrata su Telegram come allegato.</div>
+            <div class="hint" style="margin-top:8px">Se presente, la foto viene inoltrata sul canale Telegram Segnala Facile come allegato.</div>
           </div>
         </div>
 
         <div class="toggle">
           <div>
             <strong>Invia anche in forma anonima</strong><br>
-            <span>Nessun nome richiesto nella demo</span>
+            <span>Nessun nome richiesto</span>
           </div>
           <input id="anonimo" type="checkbox" />
         </div>
@@ -305,7 +305,7 @@
         </div>
 
         <div class="hint">
-          Nota: salvataggio locale + inoltro al tuo gruppo Telegram tramite Cloudflare Worker.
+          Nota: salvataggio locale + inoltro su gruppo Telegram Segnala Facile.
         </div>
       </div>
     </section>
@@ -317,7 +317,7 @@
           <div style="font-size:22px">✅</div>
           <div>
             <div style="font-weight:900;font-size:18px">Segnalazione inviata correttamente</div>
-            <div class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata su Telegram (se configurato).</div>
+            <div class="hint" style="margin:6px 0 0">Salvata in locale e inoltrata su gruppo Telegram Segnala Facile.</div>
           </div>
         </div>
 
