--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .brand{display:flex; align-items:center; gap:10px;}
     .logo{
       width:38px; height:38px; border-radius:12px;
-      background: linear-gradient(135deg, rgba(45,125,255,.95), rgba(25,195,125,.9));
+      background:url("icons/icon-192.png") center/cover no-repeat,linear-gradient(135deg, rgba(45,125,255,.95), rgba(25,195,125,.9));
       box-shadow: 0 10px 25px rgba(0,0,0,.35);
     }
     .title{font-size:18px; font-weight:800; letter-spacing:.2px}
