--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
     let photoDataUrl = null;     // dataURL (jpeg compresso)
     let photoName = "";
     let photoType = "";
+    let photoBlob = null;
 
     btnPickCamera.addEventListener("click", () => elFotoCamera.click());
     btnPickGallery.addEventListener("click", () => elFotoGallery.click());
